Redesign completo stile Zara: login, navbar unificata e template
- Convertito login.html con stile minimalista Zara (palette: nero, beige, caramello)
- Creato navbar_unified.html: componente navbar unificato con design professionale
- Sostituito navbar in tutti i template principali con componente unificato
- Aggiunto supporto multi-course billing con checkbox in stato_crediti
- Implementato ultimo giorno di lezione per ogni corso in stato_crediti
- Migliorato UX con floating button per fatturazione multipla
- Palette colori Zara: Black (#1a1a1a), Beige (#d4c5b9), Caramel (#a67c52), White (#ffffff)
- Design minimalista, professionale e coerente su tutta l'applicazione

--- a/templates/esporta_opzioni.html
+++ b/templates/esporta_opzioni.html
@@ -119,11 +119,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark shadow">
-        <div class="container">
-            <a class="navbar-brand" href="#">📊 Esporta Dati</a>
-        </div>
-    </nav>
+    {% include 'components/navbar_unified.html' %}
 
     <div class="container my-4">
         <div class="card shadow-sm mb-4">
