--- a/templates/modifica_fattura.html
+++ b/templates/modifica_fattura.html
@@ -34,11 +34,9 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark shadow">
-    <div class="container">
-      <a class="navbar-brand" href="#">✏️ Modifica Fattura</a>
-    </div>
-  </nav>
+  {% include 'components/navbar_unified.html' %}
+  <div style="display:none" class="container">
+  </div>
 
   <div class="container my-4">
     <div class="card shadow-sm">
