--- a/templates/aggiungi_fattura.html
+++ b/templates/aggiungi_fattura.html
@@ -66,11 +66,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark shadow">
-    <div class="container">
-      <a class="navbar-brand" href="#">📝 Aggiungi Nuova Fattura</a>
-    </div>
-  </nav>
+  {% include 'components/navbar_unified.html' %}
 
   <div class="container my-4">
     <div class="card shadow-sm">
