--- a/templates/corsi.html
+++ b/templates/corsi.html
@@ -62,11 +62,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark shadow">
-        <div class="container">
-            <a class="navbar-brand" href="#">📚 Gestione Corsi</a>
-        </div>
-    </nav>
+    {% include 'components/navbar_unified.html' %}
 
     <div class="container my-4">
         <div class="card shadow-sm mb-4">
