--- a/templates/fatture.html
+++ b/templates/fatture.html
@@ -104,11 +104,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark shadow">
-    <div class="container">
-      <a class="navbar-brand" href="#">Gestione Fatture</a>
-    </div>
-  </nav>
+  {% include 'components/navbar_unified.html' %}
 
   <div class="container my-4">
     <div class="card shadow-sm">
