--- a/templates/stato_crediti.html
+++ b/templates/stato_crediti.html
@@ -159,38 +159,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('lezioni.dashboard') }}">📚 Gestione Lezioni</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('lezioni.dashboard') }}">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('corsi.lista_corsi') }}">Corsi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('fatture.index') }}">Fatture</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{{ url_for('stato_crediti.stato_crediti') }}">
-                            📊 Stato Crediti
-                            {% if corsi_pronti > 0 %}
-                            <span class="badge bg-danger">{{ corsi_pronti }}</span>
-                            {% endif %}
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {% include 'components/navbar_unified.html' %}
 
     <div class="container-fluid mt-4">
         <div class="row mb-4">
