Aggiunto modulo Contratti con Claude AI - Gestione e analisi intelligente di contratti PDF con chat interattiva

--- a/templates/components/ios_bottomtab.html
+++ b/templates/components/ios_bottomtab.html
@@ -77,6 +77,13 @@
                 </span>
                 <span class="ios-list-chevron"></span>
             </a>
+            <a href="{{ url_for('contratti.lista_contratti') }}" class="ios-list-item">
+                <span class="ios-list-icon">📄</span>
+                <span class="ios-list-content">
+                    <span class="ios-list-title">Contratti</span>
+                </span>
+                <span class="ios-list-chevron"></span>
+            </a>
             <a href="{{ url_for('export.importa_csv') }}" class="ios-list-item">
                 <span class="ios-list-icon">📥</span>
                 <span class="ios-list-content">
