Add Contratti to hamburger menu

--- a/templates/components/navbar_unified.html
+++ b/templates/components/navbar_unified.html
@@ -278,6 +278,7 @@
             <li><a href="{{ url_for('stato_crediti.stato_crediti') }}" class="nav-menu-item">📊 Stato Crediti</a></li>
             <li><a href="{{ url_for('lezioni.compenso') }}" class="nav-menu-item">💵 Compenso</a></li>
             <li><a href="{{ url_for('resoconto.resoconto_annuale') }}" class="nav-menu-item">📈 Resoconto</a></li>
+            <li><a href="{{ url_for('contratti.lista_contratti') }}" class="nav-menu-item">📄 Contratti</a></li>
             <li><a href="{{ url_for('google_calendar.sincronizza') }}" class="nav-menu-item">🔄 Sincronizza Google</a></li>
             <li><a href="{{ url_for('auth.logout') }}" class="nav-menu-item">🚪 Logout</a></li>
         </ul>
